# PoseDetection

./: CMakeLists.txt  PoseDetection.pro  README.md  pose.pro
include/: pose.h
src/: algorithm.cpp  algorithm.h  internal.h  main.cpp  mainwindow.cpp  mainwindow.h  pose.c  pose.cc
src/input/: depthcamera.cpp  depthcamera.h  depthcameradimager.cpp  depthcameradimager.h  depthcamerakinectsdk.cpp  depthcamerakinectsdk.h  depthcamerakinectsdk2.cpp  depthcamerakinectsdk2.h  input.cpp  input.h
src/segmentation/: connectedcomponentlabeling.cpp  connectedcomponentlabeling.h  staticmap.cpp  staticmap.h  tracking.cpp  tracking.h
src/tracking/: bone.cpp  bone.h  fitting.cpp  fitting.h  fittingmethod.cpp  fittingmethod.h  fittingmethodpso.cpp  fittingmethodpso.h  joint.cpp  joint.h  skeleton.cpp  skeleton.h  skeletonupperbody.cpp  skeletonupperbody.h
src/utils/: boundingbox2d.cpp  boundingbox2d.h  boundingbox3d.cpp  boundingbox3d.h  connectedcomponent.cpp  connectedcomponent.h  exception.cpp  exception.h  module.cpp  module.h  numberedfilereader.cpp  numberedfilereader.h  numberedfilewriter.cpp  numberedfilewriter.h  streamreader.cpp  streamreader.h  streamwriter.cpp  streamwriter.h  timer.cpp  timer.h  utils.cpp  utils.h
